--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="#"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="files/Lyam Jones ICT CV.pdf" download="Lyam Jones CV" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
