replaced most lorem text

--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
             <h3>Hello, it's me</h3>
             <h1>Lyam Jones</h1>
             <h3>And i'm a <span class="typing-text"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, quam quia? Qui, natus! Vitae eius
-                quia nihil, modi nobis delectus.</p>
+            <p>This page is a showcase with skills that I have to offer</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://www.linkedin.com/in/lyam-jones-040a67230/"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="files/Lyam Jones ICT CV.pdf" download="Lyam Jones CV" class="btn">Download CV</a>
+            <a href="files/Lyam Jones ICT CV.pdf" download="Lyam Jones CV" target="_blank" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
@@ -62,12 +61,12 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias quis at veniam animi recusandae
-                accusantium quod illo.
-                Ipsum consequuntur placeat velit. Omnis nam, cumque amet consectetur nulla iste rerum excepturi?
-                Rem animi deserunt ipsam neque soluta omnis, et asperiores, recusandae aliquam praesentium obcaecati?
-                Sint dicta fugit magni nihil deleniti?</p>
-            <a href="#" class="btn">Read More</a>
+            <p>An enthusiastic person who is open to new knowledge. In my spare time I like to keep an eye on technical
+                and
+                economic developments and I can regularly be found in the gym. I am an enterprising person and
+                also function under the pressure of deadlines. I like to work in a team, but can also work
+                independently.</p>
+            <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
 
@@ -79,26 +78,23 @@
             <div class="services-box">
                 <i class='bx bxl-html5'></i>
                 <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas possimus suscipit culpa saepe
-                    commodi?
-                    Eveniet cupiditate incidunt nisi velit possimus!</p>
-                <a href="" class="btn">Read More</a>
+                <p>Most of the projects I have worked on during school and my first year of work had to do with HTML
+                </p>
+                <!-- <a href="" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
                 <i class='bx bxl-css3'></i>
                 <h3>CSS/CSS3/Less</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas possimus suscipit culpa saepe
-                    commodi?
-                    Eveniet cupiditate incidunt nisi velit possimus!</p>
-                <a href="" class="btn">Read More</a>
+                <p>Also CSS was a main part of most projects. For example, most page make-overs I did, mainly owe their
+                    appearance to CSS</p>
+                <!-- <a href="" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
                 <i class='bx bxl-javascript'></i>
                 <h3>Javascript</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas possimus suscipit culpa saepe
-                    commodi?
-                    Eveniet cupiditate incidunt nisi velit possimus!</p>
-                <a href="" class="btn">Read More</a>
+                <p>I have use JS to make things such as a image view carousel, read more buttons and the image reveal
+                    effects on this page. </p>
+                <!-- <a href="" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
                 <i class='bx bxl-typescript'></i>
@@ -106,7 +102,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas possimus suscipit culpa saepe
                     commodi?
                     Eveniet cupiditate incidunt nisi velit possimus!</p>
-                <a href="" class="btn">Read More</a>
+                <!-- <a href="" class="btn">Read More</a> -->
             </div>
         </div>
     </section>
@@ -120,8 +116,9 @@
                 <img src="images/Profile-picture-about.jpg" alt="Portfolio-project-image">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, ipsam!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>My latest project was web design and the development of the page. The source code can be found by
+                        following the link.</p>
+                    <a href="https://github.com/LJProjectss/portfolio-js" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
